# patternengine

./: .gitignore  .readthedocs.yaml  Changelog.md  LICENSE  README.md  README.rst  TUTORIAL.md  pyproject.toml  requirements.txt
docs/: make.bat  requirements.txt
docs/source/: api.rst  conf.py  glossary.rst  helpers-api.rst  helpers.rst  index.rst  introduction.rst  overview.rst  tutorial.rst
src/patternengine/: __init__.py  app.py  bullet.py  bullets.py  compsys.py  config.py  demo.py  engine.py  example.py  peglm.py  poms.py  rings.py  title.py
src/patternengine/demos/: 00.py  01.py  02.py  03.py  04.py  05.py  06.py  __init__.py  ringtypes.py
src/patternengine/tutorial/: __init__.py  tut00.py  tut01.py  tut02.py  tut03.py  tut04.py  tut05.py  tut06.py  tut07.py  tut08.py  tut08a.py
tests/: test_patternengine.py
